@@ -1,7 +1,5 @@
 sample0
 sample1
-sample2
-sample3
 sample4
 smack00
 smack01
