@@ -1,22 +1,0 @@
-stderr of test 'sample2` in directory 'sql/test/mapi` itself:
-
-
-# 22:25:11 >  
-# 22:25:11 >  Mtimeout -timeout 180 Mserver "--config=/var/tmp/_PREFIX_MONET_GNU_32_d__/etc/monet.conf" --debug=10 --set "monet_mod_path=/var/tmp/_PREFIX_MONET_GNU_32_d__/lib/MonetDB" --set "gdk_dbfarm=/var/tmp/_PREFIX_MONET_GNU_32_d__/var/MonetDB/dbfarm" --set "sql_logdir=/var/tmp/_PREFIX_MONET_GNU_32_d__/var/MonetDB/log" --set mapi_port=42910 --set sql_port=52446 --set monet_prompt= --trace "--dbname=mTests_src_mapi_examples_C" "/var/tmp/_PREFIX_MONET_GNU_32_d__/lib/MonetDB/mapi.mil" ; echo ; echo Over..
-# 22:25:11 >  
-
-
-# 22:25:12 >  
-# 22:25:12 >  Mtimeout -timeout 60 ./sample2.MAPI sample2 
-# 22:25:12 >  
-
-
-# 22:25:12 >  
-# 22:25:12 >  Mtimeout -timeout 60 Mshutdown.py "--config=/var/tmp/_PREFIX_MONET_GNU_32_d__/etc/monet.conf" --host=draco --port=42910
-# 22:25:12 >  
-
-
-# 22:25:13 >  
-# 22:25:13 >  Done.
-# 22:25:13 >  
-
