@@ -1,33 +1,0 @@
-stdout of test 'sample3` in directory 'sql/test/mapi` itself:
-
-
-# 21:24:04 >  
-# 21:24:04 >  Mtimeout -timeout 180 Mserver "--config=/net/pictor.ins.cwi.nl/export/scratch1/fabian/monet-current/program/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/net/pictor.ins.cwi.nl/export/scratch1/fabian/monet-current/program/lib/MonetDB" --set "gdk_dbfarm=/net/pictor.ins.cwi.nl/export/scratch1/fabian/monet-current/program/var/MonetDB/dbfarm" --set "sql_logdir=/net/pictor.ins.cwi.nl/export/scratch1/fabian/monet-current/program/var/MonetDB/log" --set mapi_port=43642 --set sql_port=55700 --set monet_prompt= --trace "--dbname=mTests_src_backends_monet4" "/net/pictor.ins.cwi.nl/export/scratch1/fabian/monet-current/sql/build/src/test/mapi/sql_server.mil" ; echo ; echo Over..
-# 21:24:04 >  
-
-# Monet Database Server V4.5.0
-# Copyright (c) 1993-2004, CWI. All rights reserved.
-# Compiled for i686-redhat-linux-gnu/32bit; dynamically linked.
-# Visit http://monetdb.cwi.nl/ for further information.
-
-
-Ready.
-
-
-# 21:24:05 >  
-# 21:24:05 >  Mtimeout -timeout 60 ./sample3.SQL sample3 
-# 21:24:05 >  
-
-
-# 21:24:05 >  
-# 21:24:05 >  sample3 pictor 55700 sql
-# 21:24:05 >  
-
-rows received 2 with 2 fields
-name=John age=23 
-name=Mary age=22 
-
-# 21:24:05 >  
-# 21:24:05 >  Done.
-# 21:24:05 >  
-
